--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="f-ujO-0lkVyBR7sgsttba583fQWcDWERnmx5sRjXonA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Løs dine krydsord med lethed ved hjælp af Danmarks største og gratis ordbog. Krydsord hjælp er brugervenlig, opdateret dagligt og klar til at hjælpe dig med hurtige løsninger. Perfekt til ordentusiaster!">
     <title>Krydsord Hjælp - Find Hurtige Løsninger med Danmarks Største Ordbog</title>
     <meta name="keywords" content="Krydsord hjælp">
   <meta name="robots" content="index, follow">
-    <link rel="canonical" href="">
-    <link rel="alternate" hreflang="en" href="">
+    <link rel="canonical" href="https://krydsordhjaelp.onrender.com">
+    <link rel="alternate" hreflang="en" href="https://krydsordhjaelp.onrender.com">
     
     <script type="application/ld+json">
         {
@@ -16,7 +17,7 @@
             "@type": "WebPage",
             "name": "Krydsord Hjælp - Find Hurtige Løsninger med Danmarks Største Ordbog",
             "description": "Løs dine krydsord med lethed ved hjælp af Danmarks største og gratis ordbog. Krydsord hjælp er brugervenlig, opdateret dagligt og klar til at hjælpe dig med hurtige løsninger. Perfekt til ordentusiaster!",
-            "url": ""
+            "url": "https://krydsordhjaelp.onrender.com"
         }
         </script>
     <style>
